crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_empty_state.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 33004
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   0 agents  + 0 panes   sort PANE ID   <clock>
j/k move  ·  / filter  ·  : commands  ·  ? help
────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│                                        No agents tracked.                                        │
│                       Start an agent, or run `muxa doctor` to check setup.                       │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Note ────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k  move   h/l  tree   /  filter   :  commands   ⏎  jump   o  preview   m  message   M  mailbox
