crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_help_overlay.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 33296
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   sort PANE ID   <clock>
j/k move  ·  / filter  ·  : commands  ·  ? help
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ───────────────────┌ help · ?/F1/Esc closes · q/Ctrl-C quits watch ───────────────────────────────────┐───────────────────────────┐
│  NAME                   ST│Filter & navigation                                                               │                           │
│> alpha:0.0              ○ │  /               filter rows; any key types into it once armed                   │                           │
│                           │  Backspace/C-W   edit filter / delete previous word                              │                           │
│                           │  Ctrl-U / Esc    clear filter; Esc again backs out / quits                       │                           │
│                           │  ↑/↓ · j/k       move siblings in focus mode; visible nodes otherwise            │                           │
│                           │  ←/→ · h/l       parent/child in focus mode; collapse/expand otherwise           │                           │
│                           │  gg/G · Home/End first / last selectable row                                     │                           │
│                           │  PgUp/PgDn       page; Ctrl-U/Ctrl-D half page                                   │                           │
│                           │  Enter          attach via active window/pane or exact pane                      │                           │
│                           │  C/n/w/R/p/P    shell window / agent pane / work up / rename / keepalive start·li│                           │
│                           │  a/A · Ctrl-E/n ask / conversations · new mode/draft · Enter read · d/D delete   │                           │
│                           │                                                                                  │                           │
│                           │Commands & inspection                                                             │                           │
│                           │  :              command palette (Tab completes)                                  │                           │
│                           │  o / Alt-P      open preview overlay                                             │                           │
│                           │  Alt-I / Alt-E  inspector / persistent event inbox                               │                           │
│                           │  |              cycle list/inspector split (50/50 → 70/30 → 30/70)               │                           │
│                           │  [/] · f/c      (in preview) agent / geometry / content                          │                           │
│                           │  Enter          (in preview) jump to pinned pane                                 │                           │
│                           │  m / M / Space  message / mailbox / mark · Tab picks the window’s pane           │                           │
│                           │  u/U · Alt-A · N        unread row / all read · attention filter · memo panel    │                           │
│                           │  Alt-1/2 · W    screen topology / collab · W is the work table                   │                           │
└───────────────────────────│  v              (in collab) toggle table / sequence history                      │───────────────────────────┘
┌ Note ─────────────────────│  i / e          (in mailbox) claim inbox / reply                                 │───────────────────────────┐
│                           │Sorting                                                                           │                           │
│                           │  Alt-S/L/D/T    sibling name / latest / duration / state                         │                           │
│                           │State markers                                                                     │                           │
│                           │  ● working  ▶ input  ◆ choice  ■ error  ○ idle  ◌ starting  × stopped            │                           │
│                           │  TREE: ◇ subagent  ▸ shell  + process; helper-only trees hidden                  │                           │
│                           │                                                                                  │                           │
│                           │Quick actions (act on selected node)                                              │                           │
│                           │  Alt-C          copy last prompt to clipboard                                    │                           │
│                           │  Alt-K          close session/window/pane (confirm popup)                        │                           │
│                           │  Alt-X          interrupt selected agent pane (confirm popup)                    │                           │
└───────────────────────────└──────────────────────────────────────────────────────────────────────────────────┘───────────────────────────┘
 j/k  move   h/l  tree   /  filter   :  commands   ⏎  jump   o  preview   m  message   M  mailbox   N  note   ?  help
