crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_mixed_list_with_selection.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 33273
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   ▶ ◆ ● ○  + 0 panes   sort PANE ID   <clock>
j/k move  ·  / filter  ·  : commands  ·  ? help
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                   STATE        ACT    SUMMARY                                                        │
│  alpha:0.0              ● WORK <rel> <rel> alpha response                                                 │
│> alpha:1.0              ▶ WAIT <rel> <rel> beta response                                                  │
│                                             ↳ beta response                                                │
│  alpha:2.0              ◆ CHOICE <rel> <rel> gamma response                                                 │
│  (no pane)              ○ IDLE <rel> <rel> -                                                              │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Note ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                            │
│                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k  move   h/l  tree   /  filter   :  commands   ⏎  jump   o  preview   m  message   M  mailbox   N  note
