crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_nested_topology_tree.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 33262
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   2 sessions · 3 windows · 4 panes   sort NAME   <clock>
j/k move  ·  / filter  ·  : commands  ·  ? help
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Topology ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  STATE      SESSION / WINDOW / PANE                         AGE     SUMMARY                                        │
│  ▶          tmux:amux ▸ junia › DOCS                        <rel> release approval                               │
│  ◆ ● ○      tmux:default ▼ muxa                             —       2 windows · 3 agents                           │
│> ◆ ●          ├─ ▼ TEST-0001                                <rel> 2 agents · reviewing changes / editing middlewa│
│  ●            │ ├─   %12  codex                             <rel> editing middleware                             │
│  ◆            │ └─   %13  codex                             <rel> reviewing changes                              │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Note ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                    │
│                                                                                                                    │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k  move   h/l  tree   /  filter   :  commands   ⏎  jump   o  preview   m  message   M  mailbox   N  note   ?  help
