crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_preview_popup.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 33350
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   sort PANE ID   <clock>
j/k move  ·  / filter  ·  : commands  ·  ? help
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                   STATE        ACT    SUMMARY                                                                  │
│> alpha:0.0┌ preview · alpha:0.0 · prompt ────────────────────────────────────────────────────────────────┐           │
│           │pane: alpha:0.0    kind: claude_code    state: working                                        │           │
│           │                                                                                              │           │
│           │Last prompt:                                                                                  │           │
│           │the prompt body                                                                               │           │
│           │                                                                                              │           │
│           │Last response:                                                                                │           │
│           │the response body                                                                             │           │
└───────────│                                                                                              │───────────┘
┌ Note ─────│                                                                                              │───────────┐
│           │                                                                                              │           │
│           └──────────────────────────────────────────────────────────────────────────────────────────────┘           │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↑/↓  scroll   PgUp/PgDn  page   f  fullscreen   c  live pane   ⏎  jump   r  refresh   o/p/q/Esc  back
