crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_row_error.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 33210
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   sort PANE ID   <clock>
j/k move  ·  / filter  ·  : commands  ·  ? help
────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                   STATE        ACT    SUMMARY                                              │
│> alpha:3.0              ■ ERR <rel> <rel> boom                                                 │
│                                             ↳ boom                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Note ────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k  move   h/l  tree   /  filter   :  commands   ⏎  jump   o  preview   m  message   M  mailbox
