crates/muxa-cli/src/snapshots/muxa__watch__tests__snapshot_row_working.snap
---
source: crates/muxa-cli/src/watch.rs
assertion_line: 33141
expression: "snapshot_helpers::buffer_string(&terminal)"
---
 muxa watch   1 agent  + 0 panes   sort PANE ID   <clock>
j/k move  ·  / filter  ·  : commands  ·  ? help
────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                   STATE        ACT    SUMMARY                                              │
│> alpha:0.0              ● WORK <rel> <rel> refactor the ipc module                              │
│                                             ↳ refactor the ipc module                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Note ────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k  move   h/l  tree   /  filter   :  commands   ⏎  jump   o  preview   m  message   M  mailbox
